architect-go/k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: architect-staging
  labels:
    name: architect-staging
    environment: staging
